fix(Coinify): issues on mobile with screen height and 7 day delay modal

--- a/assets/css/components/_modals.scss
+++ b/assets/css/components/_modals.scss
@@ -232,6 +232,9 @@
   }
   &.sm {
     .modal-dialog { width: 40vw; }
+    @media(max-width: 768px) {
+      .modal-dialog { width: 80vw; }
+    }
   }
   &.xs {
     .modal-dialog { width: 30vw; }
